--- a/hyperapp/async/ui/command_list.yaml
+++ b/hyperapp/async/ui/command_list.yaml
@@ -1,6 +1,10 @@
 import:
   types:
     command_list:
+      - command_list_d
+      - object_command_list_d
+      - global_command_list_d
+      - view_command_list_d
       - object_command_list
       - global_command_list
       - view_command_list
