--- a/hyperapp/server/sample_list.yaml
+++ b/hyperapp/server/sample_list.yaml
@@ -10,6 +10,8 @@ import:
     rpc_command:
       - rpc_element_command
     sample_list:
+      - sample_list_d
+      - sample_list_article_d
       - article
   code:
     - common.list
