--- a/hyperapp/server/sample_tree.yaml
+++ b/hyperapp/server/sample_tree.yaml
@@ -10,6 +10,8 @@ import:
     rpc_command:
       - rpc_element_command
     sample_tree:
+      - sample_tree_d
+      - sample_tree_article_d
       - article
   code:
     - common.tree
