--- a/hyperapp/async/ui/rpc_command.yaml
+++ b/hyperapp/async/ui/rpc_command.yaml
@@ -1,7 +1,22 @@
 import:
   types:
+    command_list:
+      - object_command_list_d
+    command:
+      - object_commands_d
     rpc:
       - endpoint
     rpc_command:
+      - clone_rpc_element_command_command
       - rpc_element_command_d
       - rpc_element_command
+      - alt_rpc_element_command_d
+      - alt_rpc_element_command
+  code:
+    - async.ui.object_command
+require:
+  - lcs
+  - async_web
+  - client_rpc_endpoint
+  - async_rpc_proxy
+  - client_identity
