--- a/hyperapp/async/ui/qt/master_details.yaml
+++ b/hyperapp/async/ui/qt/master_details.yaml
@@ -1,9 +1,11 @@
 import:
   types:
+    view:
+      - view_d
     layout_editor:
       - object_layout_editor
     master_details:
-      - master_details_layout
+      - master_details_view
   code:
     - async.ui.command
     - client.composite
