--- a/hyperapp/async/ui/navigator.yaml
+++ b/hyperapp/async/ui/navigator.yaml
@@ -14,6 +14,6 @@ require:
   - async_web
   - object_factory
   - object_commands_factory
-  - view_factory
+  - view_producer
   - view_registry
   - global_command_list
