ObjectViewConfig: restore view selector command

--- a/hyperapp/async/ui/object_view_config.yaml
+++ b/hyperapp/async/ui/object_view_config.yaml
@@ -10,6 +10,8 @@ import:
       - dir_list
     selector:
       - selector
+    view_selector:
+      - view_selector
     object_view_config:
       - object_view_config_d
       - object_view_config
