--- a/hyperapp/async/ui/record_view_config.yaml
+++ b/hyperapp/async/ui/record_view_config.yaml
@@ -2,6 +2,8 @@ import:
   types:
     record_object:
       - record_object_d
+    view:
+      - view_d
     command_list:
       - object_command_list
     record_field_list:
@@ -13,6 +15,7 @@ import:
     - async.ui.command
     - async.ui.object_view_config
 require:
+  - lcs
   - async_web
   - object_factory
   - view_producer
