--- a/hyperapp/async/ui/object_view_config.yaml
+++ b/hyperapp/async/ui/object_view_config.yaml
@@ -10,6 +10,8 @@ import:
       - dir_list
     selector:
       - selector
+    available_view_list:
+      - available_view_list
     view_selector:
       - view_selector
     object_view_config:
