--- a/hyperapp/client/default_state_builder.yaml
+++ b/hyperapp/client/default_state_builder.yaml
@@ -12,9 +12,6 @@ import:
     - size
     - pos
     - window
-    root_layout:
-    - root_layout
-  code:
-  - async.ui.module
+    - state
 provide:
   - default_state_builder
