--- a/hyperapp/async/ui/command_list.yaml
+++ b/hyperapp/async/ui/command_list.yaml
@@ -16,7 +16,7 @@ import:
     - async.ui.object
     - async.ui.command
     - async.ui.column
-    - client.command_hub
+    - async.ui.command_hub
     - async.ui.object_command
     - async.ui.simple_list_object
     - async.ui.qt.qt_keys
@@ -27,4 +27,3 @@ require:
   - object_registry
   - object_commands_factory
   - global_command_list
-  - layout_manager
