Restore tab view

--- a/hyperapp/async/ui/qt/tab_view.yaml
+++ b/hyperapp/async/ui/qt/tab_view.yaml
@@ -1,14 +1,9 @@
 import:
   types:
     tab_view:
-    - tab_view
-    navigator:
-    - navigator
+    - state
   code:
-    - async.ui.qt.util
     - async.ui.qt.view
     - async.ui.command
-    - async.ui.module
 require:
   - view_registry
-  - layout_watcher
