--- a/hyperapp/client/default_state_builder.yaml
+++ b/hyperapp/client/default_state_builder.yaml
@@ -3,7 +3,7 @@ import:
     navigator:
     - navigator
     tab_view:
-    - tab_view
+    - state
     menu_bar:
     - menu_bar
     command_pane:
