Restore get_current_commands for command hub

--- a/hyperapp/async/ui/navigator.yaml
+++ b/hyperapp/async/ui/navigator.yaml
@@ -6,6 +6,7 @@ import:
       - navigator
   code:
     - async.ui.command
+    - async.ui.view_command
     - async.ui.module
 require:
   - async_web
