--- a/hyperapp/async/ui/object_registry.yaml
+++ b/hyperapp/async/ui/object_registry.yaml
@@ -1,4 +1,7 @@
 import:
+  types:
+    object_registry:
+      - raw_record_view_d
   code:
     - async.code_registry
     - async.ui.record_object
