--- a/hyperapp/async/ui/qt/text_view.yaml
+++ b/hyperapp/async/ui/qt/text_view.yaml
@@ -6,7 +6,7 @@ import:
       - text_view
       - text_edit_view
   code:
-    - async.ui.object
+    - async.ui.ui_object
     - async.ui.qt.view
     - async.ui.string_object
 require:
