--- a/hyperapp/async/ui/selector.yaml
+++ b/hyperapp/async/ui/selector.yaml
@@ -7,7 +7,7 @@ import:
       - object_method_callback
   code:
     - async.ui.command
-    - async.ui.object
+    - async.ui.ui_object
     - async.code_registry
 require:
   - async_web
