--- a/hyperapp/async/ui/view_selector.yaml
+++ b/hyperapp/async/ui/view_selector.yaml
@@ -15,7 +15,7 @@ import:
       - selector
   code:
     - async.ui.command
-    - async.ui.object
+    - async.ui.ui_object
     - async.ui.object_command
     - async.ui.column
     - async.ui.simple_list_object
