--- a/hyperapp/client/tree_view_sample.yaml
+++ b/hyperapp/client/tree_view_sample.yaml
@@ -7,7 +7,7 @@ import:
       - tree_sample_article
   code:
     - async.ui.command
-    - async.ui.object
+    - async.ui.ui_object
     - async.ui.column
     - async.ui.tree_object
     - async.ui.string_object
