--- a/hyperapp/async/ui/transport_log.yaml
+++ b/hyperapp/async/ui/transport_log.yaml
@@ -6,6 +6,7 @@ import:
   code:
     - async.ui.command
     - async.ui.column
+    - async.ui.list_object
     - async.ui.simple_list_object
     - async.ui.module
 require:
