test_list_service: move from interfaces to server paths

--- a/hyperapp/async/test/list_service_client.yaml
+++ b/hyperapp/async/test/list_service_client.yaml
@@ -9,8 +9,10 @@ require:
   - unbundler
   - object_registry
   - object_factory
+  - command_registry
+  - peer_registry
   - generate_rsa_identity
+  - servant_path_from_data
   - async_rpc_endpoint
   - async_endpoint_registry
-  - async_rpc_proxy
-  - command_registry
+  - async_rpc_call
