sample_list module: move from interfaces to server paths

--- a/hyperapp/server/sample_list.yaml
+++ b/hyperapp/server/sample_list.yaml
@@ -12,6 +12,7 @@ import:
     sample_list:
       - sample_list_d
       - sample_list_article_d
+      - row
       - article
   code:
     - common.list
