sample_tree module: move from interfaces to server paths

--- a/hyperapp/server/sample_list.yaml
+++ b/hyperapp/server/sample_list.yaml
@@ -14,8 +14,7 @@ import:
       - row
       - article
   code:
-    - common.list
-    - common.record
+    - common.item_column_list
 require:
   - server_identity
   - server_rpc_endpoint
