--- a/hyperapp/async/ui/object_registry.yaml
+++ b/hyperapp/async/ui/object_registry.yaml
@@ -7,6 +7,7 @@ import:
     - async.ui.record_object
 provide:
   - object_registry
+  - default_object_factory
   - object_factory
 require:
   - async_web
