--- a/hyperapp/server/htest_list.yaml
+++ b/hyperapp/server/htest_list.yaml
@@ -3,7 +3,14 @@ import:
     service:
       - list_service
     rpc_command:
-      - rpc_element_command
+      - rpc_command
+    rpc_callback:
+      - rpc_callback
+    module_list:
+      - module_list_d
+      - item
+    selector:
+      - selector
     htest_list:
       - htest_list_d
       - item
