--- a/log-config/client-file.yaml
+++ b/log-config/client-file.yaml
@@ -5,7 +5,7 @@ formatters:
   simple:
     format: '%(asctime)-15s  %(message).500s'
   full:
-    format: '%(asctime)-15s %(filename)-30s %(lineno)4d %(levelname)-8s %(message).2000s'
+    format: '%(asctime)-15s %(name)-44s %(levelname)-8s %(message).2000s'
 
 handlers:
   console:
@@ -33,12 +33,6 @@ handlers:
     filename: /tmp/client-warning.log
     maxBytes: 10485760  # 10M
     backupCount: 20
-
-loggers:
-  hyperapp.common.web: {level: WARNING}
-  hyperapp.common.logger: {level: INFO}
-  hyperapp.common.ref_collector: {level: INFO}
-  hyperapp.client.registry: {level: INFO}
 
 root:
   level: DEBUG
