Rename internal_error -> server_error

--- a/hyperapp/sync/rpc/rpc_endpoint.yaml
+++ b/hyperapp/sync/rpc/rpc_endpoint.yaml
@@ -4,7 +4,7 @@ import:
     - request
     - response
     - error_response
-    - internal_error
+    - server_error
 require:
   - peer_registry
   - transport
