--- a/hyperapp/async/rpc/rpc_endpoint.yaml
+++ b/hyperapp/async/rpc/rpc_endpoint.yaml
@@ -4,7 +4,7 @@ import:
     - request
     - response
     - error_response
-    - internal_error
+    - server_error
   code:
     - async.code_registry
 require:
