Rename module htest_list -> htest_module_list

--- a/hyperapp/server/htest_module_list.yaml
+++ b/hyperapp/server/htest_module_list.yaml
@@ -12,7 +12,7 @@ import:
       - item
     selector:
       - selector
-    htest_list:
+    htest:
       - htest_list_d
       - test_module
       - storage
