--- a/hyperapp/rpc/servant_path.yaml
+++ b/hyperapp/rpc/servant_path.yaml
@@ -4,6 +4,7 @@ import:
       - registry_name
       - get_attribute
       - partial
+      - parameterized
 provide:
   - servant_path
   - servant_path_from_data
