--- a/hyperapp/async/test/list_service_client.yaml
+++ b/hyperapp/async/test/list_service_client.yaml
@@ -13,6 +13,6 @@ require:
   - peer_registry
   - generate_rsa_identity
   - servant_path_from_data
-  - async_rpc_endpoint
+  - async_rpc_endpoint_factory
   - async_endpoint_registry
   - async_rpc_call
