Rename service: (async_)rpc_call -> (async_)rpc_call_factory

--- a/hyperapp/async/test/list_service_client.yaml
+++ b/hyperapp/async/test/list_service_client.yaml
@@ -15,4 +15,4 @@ require:
   - servant_path_from_data
   - async_rpc_endpoint_factory
   - async_endpoint_registry
-  - async_rpc_call
+  - async_rpc_call_factory
