--- a/hyperapp/server/sample_live_list.yaml
+++ b/hyperapp/server/sample_live_list.yaml
@@ -14,7 +14,7 @@ import:
 require:
   - peer_registry
   - servant_path_from_data
-  - rpc_call
+  - rpc_call_factory
   - server_identity
   - server_rpc_endpoint
   - server_ref_list
