--- a/hyperapp/async/rpc/test/echo_service.yaml
+++ b/hyperapp/async/rpc/test/echo_service.yaml
@@ -8,6 +8,6 @@ require:
   - peer_registry
   - async_rpc_endpoint_factory
   - async_endpoint_registry
-  - async_rpc_call
+  - async_rpc_call_factory
   - servant_path
   - servant_path_from_data
