--- a/hyperapp/async/ui/rpc_callback.yaml
+++ b/hyperapp/async/ui/rpc_callback.yaml
@@ -6,6 +6,6 @@ require:
   - async_web
   - peer_registry
   - servant_path_from_data
-  - async_rpc_call
+  - async_rpc_call_factory
   - client_rpc_endpoint
   - client_identity
