--- a/hyperapp/client/live_list_service.yaml
+++ b/hyperapp/client/live_list_service.yaml
@@ -9,7 +9,7 @@ require:
   - object_registry
   - command_registry
   - peer_registry
-  - async_rpc_call
+  - async_rpc_call_factory
   - servant_path
   - servant_path_from_data
   - client_identity
