--- a/hyperapp/client/record_service.yaml
+++ b/hyperapp/client/record_service.yaml
@@ -9,7 +9,7 @@ require:
   - object_registry
   - object_factory
   - command_registry
-  - async_rpc_call
+  - async_rpc_call_factory
   - servant_path_from_data
   - client_identity
   - client_rpc_endpoint
