--- a/hyperapp/server/htest_runner.yaml
+++ b/hyperapp/server/htest_runner.yaml
@@ -8,6 +8,6 @@ require:
   - peer_registry
   - rpc_endpoint_factory
   - endpoint_registry
-  - rpc_call
+  - rpc_call_factory
   - servant_path
   - servant_path_from_data
