--- a/hyperapp/sync/rpc/test/echo_service.yaml
+++ b/hyperapp/sync/rpc/test/echo_service.yaml
@@ -10,6 +10,6 @@ require:
   - peer_registry
   - rpc_endpoint_factory
   - endpoint_registry
-  - rpc_call
+  - rpc_call_factory
   - servant_path
   - servant_path_from_data
