--- a/hyperapp/async/ui/column_list.yaml
+++ b/hyperapp/async/ui/column_list.yaml
@@ -1,5 +1,8 @@
 import:
   types:
+    column:
+      - column_d
+      - column_visible_d
     column_list:
       - column_list_d
       - column_list_command
@@ -7,9 +10,10 @@ import:
     command:
       - object_commands_d
   code:
+    - async.ui.command
+    - async.ui.object_command
     - async.ui.list_object
     - async.ui.simple_list_object
-    - async.ui.object_command
 require:
   - lcs
   - object_factory
