--- a/hyperapp/async/ui/column_list.yaml
+++ b/hyperapp/async/ui/column_list.yaml
@@ -3,6 +3,7 @@ import:
     column:
       - column_d
       - column_visible_d
+      - column_list_d
     column_list:
       - column_list_d
       - column_list_command
