--- a/hyperapp/async/ui/qt/tree_view.yaml
+++ b/hyperapp/async/ui/qt/tree_view.yaml
@@ -1,5 +1,9 @@
 import:
   types:
+    column:
+      - column_d
+      - column_visible_d
+      - column_list_d
     view:
       - view_d
     tree_view:
