List service resource; list_service: use resource ref for servant

--- a/hyperapp/common/test/test_resources.resources.yaml
+++ b/hyperapp/common/test/test_resources.resources.yaml
@@ -17,3 +17,9 @@ servant_list:
   type: factory
   object: sample_servant
   attr_name: list
+
+sample_list_service:
+  type: list_service
+  identity: server_identity
+  servant: servant_list
+  key_attribute: id
