WIP: Rpc: move servant to resources; update test_sync_echo

--- a/hyperapp/common/resource/call.yaml
+++ b/hyperapp/common/resource/call.yaml
@@ -2,3 +2,8 @@ import:
   types:
     call:
       - call
+provide:
+  - resource.call
+require:
+  - resource_type_registry
+  - python_object_creg
