--- a/hyperapp/sync/rpc/test/echo_service.yaml
+++ b/hyperapp/sync/rpc/test/echo_service.yaml
@@ -11,5 +11,6 @@ require:
   - rpc_endpoint_factory
   - endpoint_registry
   - rpc_call_factory
-  - servant_path
-  - servant_path_from_data
+  - resource_registry
+  - resource.factory
+  - resource.call
