Update test_sync_echo; load servant definition at master (test) process

--- a/hyperapp/sync/rpc/test/echo_service.resources.yaml
+++ b/hyperapp/sync/rpc/test/echo_service.resources.yaml
@@ -1,6 +1,6 @@
 echo_servant_factory:
   type: factory
-  object: sync.rpc.test.echo_service
+  object: echo_service
   attr_name: Echo
 
 echo_servant:
