Update async rpc and test_async_echo

--- a/hyperapp/async/rpc/rpc_endpoint.yaml
+++ b/hyperapp/async/rpc/rpc_endpoint.yaml
@@ -11,6 +11,6 @@ require:
   - peer_registry
   - async_web
   - async_transport
-  - servant_path_from_data
+  - python_object_creg
 provide:
   - async_rpc_endpoint_factory
