Column list: fix dir_list

--- a/hyperapp/async/ui/column_list.yaml
+++ b/hyperapp/async/ui/column_list.yaml
@@ -6,6 +6,7 @@ import:
       - column_list_d
     column_list:
       - column_list_d
+      - column_list_editor_d
       - column_list_command
       - column_list
     command:
