--- a/hyperapp/server/sample_tree.yaml
+++ b/hyperapp/server/sample_tree.yaml
@@ -5,12 +5,16 @@ import:
       - record_service
     rpc_command:
       - rpc_command
+    map_service:
+      - record_service
     sample_tree:
       - sample_tree_d
       - sample_tree_article_d
+      - sample_article
       - item
       - article
 require_code_modules:
-  - server.identity
-  - server.rpc_endpoint
-  - server.server_ref_list
+  - python_object_creg
+  - resource.typed_piece
+  - resource.map_service
+  - piece_service_registry
