--- a/hyperapp/client/live_list_service.yaml
+++ b/hyperapp/client/live_list_service.yaml
@@ -10,7 +10,6 @@ require:
   - command_registry
   - peer_registry
   - async_rpc_call_factory
-  - servant_path
-  - servant_path_from_data
   - client_identity
   - client_rpc_endpoint
+  - python_object_creg
