Add requirements for some resources

--- a/hyperapp/common/resource/legacy_service.yaml
+++ b/hyperapp/common/resource/legacy_service.yaml
@@ -5,3 +5,6 @@ import:
       - module_service
 provide:
   - resource.legacy_service
+require:
+  - resource_module_registry
+  - python_object_creg
