WIP: Update server sample live list, live list service

--- a/hyperapp/client/live_list_service.yaml
+++ b/hyperapp/client/live_list_service.yaml
@@ -12,4 +12,4 @@ require:
   - async_rpc_call_factory
   - client_identity
   - client_rpc_endpoint
-  - python_object_creg
+  - python_object_acreg
