--- a/log-config/server.yaml
+++ b/log-config/server.yaml
@@ -13,10 +13,17 @@ handlers:
     level: INFO
     formatter: simple
     stream: ext://sys.stdout
-  file:
+  file-debug:
     class : logging.handlers.RotatingFileHandler
     formatter: full
-    filename: /tmp/server.log
+    filename: /tmp/server-debug.log
+    maxBytes: 10485760  # 10M
+    backupCount: 5
+  file-info:
+    class : logging.handlers.RotatingFileHandler
+    level: INFO
+    formatter: full
+    filename: /tmp/server-info.log
     maxBytes: 10485760  # 10M
     backupCount: 5
 
@@ -31,4 +38,4 @@ loggers:
 
 root:
   level: DEBUG
-  handlers: [console, file]
+  handlers: [console, file-debug, file-info]
