--- a/hyperapp/server/sample_live_list.resources.yaml
+++ b/hyperapp/server/sample_live_list.resources.yaml
@@ -5,6 +5,7 @@ import:
   - legacy_service.rpc_call_factory
   - legacy_service.server_identity
   - legacy_service.server_rpc_endpoint
+  - legacy_type.sample_list.sample_live_list_d
 
 executor_factory:
   type: attribute
@@ -64,10 +65,15 @@ describe_command:
   state_attributes: ['current_key']
   name: describe
 
+sample_live_list_d:
+  type: call
+  function: legacy_type.sample_list.sample_live_list_d
+
 sample_list_service:
   type: live_list_service
   identity: legacy_service.server_identity
   servant: list_servant_list_method
+  dir: [sample_live_list_d]
   key_attribute: key
   commands:
     - raw_command
