--- a/hyperapp/common/test/test_resources.resources.yaml
+++ b/hyperapp/common/test/test_resources.resources.yaml
@@ -5,6 +5,7 @@ import:
   - legacy_service.peer_registry
   - legacy_service.rpc_call_factory
   - legacy_service.server_identity
+  - legacy_type.test_resources.test_d
 
 sample_servant_factory:
   type: attribute
@@ -29,8 +30,13 @@ servant_list:
   object: sample_servant
   attr_name: list
 
+test_d:
+  type: call
+  function: legacy_type.test_resources.test_d
+
 sample_list_service:
   type: list_service
   identity: legacy_service.server_identity
   servant: servant_list
+  dir: [test_d]
   key_attribute: id
